--- a/CollectorsFrontEnd/CollectionViewer.xaml
+++ b/CollectorsFrontEnd/CollectionViewer.xaml
@@ -7,15 +7,32 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <RichTextBox x:Name="richTextBox" HorizontalAlignment="Left" Height="300" VerticalAlignment="Top" Width="300">
-            <FlowDocument>
-                <Paragraph>
-                    <Run Text="ggggggggggggggggggggggggggggggggggggggggggggggggRichTextBox"/>
-                    
-                    <Paragraph.ToolTip>Hey</Paragraph.ToolTip>
-                </Paragraph>
-                
-            </FlowDocument>
-        </RichTextBox>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="24"/>
+        </Grid.RowDefinitions>
+        <ContentControl Name="WindowContent" Content="{Binding}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" />
+        <TextBox Grid.Row="0"  x:Name="tbPrimaryTest" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch"/>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+            <Button x:Name="BtnAddItem" Grid.Column="0" HorizontalAlignment="Stretch">
+                <TextBlock>Add Item</TextBlock>
+            </Button>
+            <Button x:Name="BtnBulkEdit" Grid.Column="1"  HorizontalAlignment="Stretch">
+                <TextBlock>Bulk Edit</TextBlock>
+            </Button>
+            <Button x:Name="BtnLoadCollection" Grid.Column="3"  HorizontalAlignment="Stretch">
+                <TextBlock>Load Collection</TextBlock>
+            </Button>
+            <Button x:Name="BtnSaveCollection" Grid.Column="2"  HorizontalAlignment="Stretch">
+                <TextBlock>Save Collection</TextBlock>
+            </Button>
+        </Grid>
+
     </Grid>
 </UserControl>
