--- a/CollectorsFrontEnd/CollectionViewer.xaml
+++ b/CollectorsFrontEnd/CollectionViewer.xaml
@@ -5,14 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CollectorsFrontEnd"
              mc:Ignorable="d" d:DesignWidth="620" d:DesignHeight="380">
-    <Grid>
+    <Grid x:Name="MainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="5*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
         <Border  Grid.Column="1" BorderBrush="Black" BorderThickness="1">
         </Border>
-        <ListView x:Name="LVItems">
+        <Grid x:Name="CenterPanel" Grid.ZIndex="0">
+        </Grid>
+        <ListView x:Name="LVItems" Grid.ZIndex="1">
             <ListView.View>
                 <GridView x:Name="GVColumns"/>
             </ListView.View>
