Add Item Window Functional

--- a/CollectorsFrontEnd/CollectionViewer.xaml
+++ b/CollectorsFrontEnd/CollectionViewer.xaml
@@ -44,6 +44,9 @@
             <Button x:Name="BtnBulkEdit" Grid.Row="3"  HorizontalAlignment="Stretch">
                 <TextBlock>Bulk Edit</TextBlock>
             </Button>
+            <Button x:Name="BtnSaveCollection" Grid.Row="4"  HorizontalAlignment="Stretch">
+                <TextBlock>Save Collection</TextBlock>
+            </Button>
         </Grid>
 
     </Grid>
