--- a/CollectorsFrontEnd/CollectionViewer/Windows/ItemAmountInterChanger/ItemAmountInterchanger.xaml
+++ b/CollectorsFrontEnd/CollectionViewer/Windows/ItemAmountInterChanger/ItemAmountInterchanger.xaml
@@ -10,6 +10,7 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="2*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Label x:Name="LblCardName"
                HorizontalContentAlignment="Center" 
@@ -22,5 +23,20 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button   Grid.Column="0"
+                     x:Name="BtnOK" Content="OK"
+                     HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
+                     Margin="3,8"/>
+            <Button   Grid.Column="1"
+                     x:Name="BtnCancel" Content="Cancel"
+                     HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                     Margin="3,8"/>
+        </Grid>
+        
     </Grid>
 </UserControl>
