--- a/CollectorsFrontEnd/CollectionViewer/SubParts/CObjectListDisplay.xaml
+++ b/CollectorsFrontEnd/CollectionViewer/SubParts/CObjectListDisplay.xaml
@@ -8,8 +8,15 @@
              
              d:DesignHeight="24" d:DesignWidth="80" HorizontalAlignment="Stretch">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
         <Button x:Name="BtnAmountInterchanger">
             <Label Content="=="></Label>
+        </Button>
+        <Button Grid.Column="1" x:Name="BtnEditAttributes">
+            <Label Content="%"></Label>
         </Button>
     </Grid>
 </UserControl>
