--- a/CollectorsFrontEnd/App.xaml
+++ b/CollectorsFrontEnd/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CollectorsFrontEnd"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Interfaces/StoreFrontMain.xaml">
     <Application.Resources>
          
     </Application.Resources>
