--- a/CollectorsFrontEnd/Interfaces/CompCollectionView.xaml
+++ b/CollectorsFrontEnd/Interfaces/CompCollectionView.xaml
@@ -1,11 +1,13 @@
-﻿<UserControl x:Class="CollectorsFrontEnd.CollectionViewer"
+﻿<UserControl x:Class="CollectorsFrontEnd.Interfaces.CompCollectionView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CollectorsFrontEnd"
-             mc:Ignorable="d" d:DesignWidth="620" d:DesignHeight="380">
-    <Grid x:Name="MainGrid">
+             xmlns:local="clr-namespace:CollectorsFrontEnd.Interfaces"
+             xmlns:subs="clr-namespace:CollectorsFrontEnd.Interfaces.Subs"
+             mc:Ignorable="d" 
+             d:DesignWidth="620" d:DesignHeight="380">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="5*"/>
             <ColumnDefinition Width="3*"/>
@@ -14,10 +16,10 @@
         </Border>
         <Grid x:Name="CenterPanel" Grid.ZIndex="0">
         </Grid>
-        <ItemsControl x:Name="SPItemsControl">
+        <ItemsControl x:Name="SPItemsControl" ItemsSource="{Binding LstGeneralizations}">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <local:CollectionViewGeneralization/>
+                    <ContentControl Content="{Binding}"/>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
@@ -33,14 +35,16 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Image x:Name="ITest"></Image>
-            <Button x:Name="BtnAddItem" Grid.Row="1" HorizontalAlignment="Stretch">
+
+            <Button x:Name="BtnAddItem" Grid.Row="1" HorizontalAlignment="Stretch"
+                    Click="eAddItemWindowButton_Click">
                 <TextBlock>Add Item</TextBlock>
             </Button>
-            <Button x:Name="BtnBulkAdd"  Grid.Row="2"  HorizontalAlignment="Stretch">
+            <Button x:Name="BtnBulkAdd"  Grid.Row="2"  HorizontalAlignment="Stretch"
+                    >
                 <TextBlock>Bulk Add</TextBlock>
             </Button>
-            <Button x:Name="BtnBulkEdit" Grid.Row="3"  HorizontalAlignment="Stretch" Click="BtnBulkEdit_Click">
+            <Button x:Name="BtnBulkEdit" Grid.Row="3"  HorizontalAlignment="Stretch">
                 <TextBlock>Bulk Edit</TextBlock>
             </Button>
             <Button x:Name="BtnSaveCollection" Grid.Row="4"  HorizontalAlignment="Stretch">
