--- a/CollectorsFrontEnd/Interfaces/StoreFrontMain.xaml
+++ b/CollectorsFrontEnd/Interfaces/StoreFrontMain.xaml
@@ -1,17 +1,21 @@
-﻿<Window x:Class="CollectorsFrontEnd.MainWindow"
+﻿<Window x:Class="CollectorsFrontEnd.Interfaces.StoreFrontMain"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CollectorsFrontEnd"
+        xmlns:local="clr-namespace:CollectorsFrontEnd.Interfaces"
         mc:Ignorable="d"
         Title="Storefront Pro" Height="480" Width="620">
-    <Grid x:Name="GrdMain">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
             <RowDefinition/>
             <RowDefinition Height="24"/>
         </Grid.RowDefinitions>
+        
+        <ContentPresenter Grid.Row="1" Content="{Binding OperationWindow}">
+
+        </ContentPresenter>
         <DockPanel Grid.Row="0" >
             <Border BorderBrush="Black" BorderThickness="1">
                 <Menu DockPanel.Dock="Top" Height="20">
@@ -24,6 +28,5 @@
                 </Menu>
             </Border>
         </DockPanel>
-
     </Grid>
 </Window>
