--- a/CollectorsFrontEnd/Interfaces/Subs/CompSubAmountChanger.xaml
+++ b/CollectorsFrontEnd/Interfaces/Subs/CompSubAmountChanger.xaml
@@ -17,7 +17,7 @@
                HorizontalContentAlignment="Center" 
                  VerticalContentAlignment="Center"
                FontSize="16" Content="{Binding Title}"></Label>
-        <Button x:Name="BtnDecrement" Grid.Column="1" Width="15" Height="15" FontSize="16">
+        <Button x:Name="BtnDecrement" Grid.Column="1" Width="15" Height="15" FontSize="16" Click="eBtnDecrement_Click">
             <Path 
       Fill="Black"
       Stroke="{x:Null}"
@@ -25,12 +25,13 @@
 
       Data="M0,0 L9,0 9,2 0,2 0,0" />
         </Button>
-        <TextBox x:Name="TBAMount" Text="5" 
+        <TextBox x:Name="TBAMount"
                  IsReadOnly="True" Grid.Column="2" Width="30" Height="30"
                  HorizontalContentAlignment="Center" 
                  VerticalContentAlignment="Center"
-                 FontSize="14"></TextBox>
-        <Button x:Name="BtnIncrement" Grid.Column="3" Width="15" Height="15" FontSize="16">
+                 FontSize="14"
+                 Text="{Binding Count}"></TextBox>
+        <Button x:Name="BtnIncrement" Grid.Column="3" Width="15" Height="15" FontSize="16" Click="eBtnIncrement_Click">
             <Path 
       Fill="Black"
       Stroke="{x:Null}"
