--- a/CollectorsFrontEnd/Interfaces/Subs/CompSubAttributeChanger.xaml
+++ b/CollectorsFrontEnd/Interfaces/Subs/CompSubAttributeChanger.xaml
@@ -5,37 +5,70 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CollectorsFrontEnd.Interfaces.Subs"
              mc:Ignorable="d" 
-             d:DesignHeight="500" d:DesignWidth="400">
+             d:DesignHeight="300" d:DesignWidth="380">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="3*"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-            <Image Source="{Binding CardImage}"></Image>
+        <Grid x:Name="GrdOverlay">
+            
         </Grid>
-        <Grid Grid.Row="1">
+        <Grid x:Name="GrdMain">
             <Grid.RowDefinitions>
-                <RowDefinition Height="2*"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Grid Grid.Row="1" Margin="4">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <Button Content="OK" Click="eOK_Click"></Button>
-                <Button Content="Cancel" Grid.Column="2" Click="eCancel_Click"></Button>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
+            <Image Grid.Column="0" Source="{Binding CardImage}"></Image>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="9*"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <DataGrid x:Name="DGMetas" AutoGenerateColumns="False" IsReadOnly="True" ItemsSource="{Binding Path=LstCurrentMetaTags}">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Key" Binding="{Binding Item1}"/>
+                        <DataGridTextColumn Header="Value" Binding="{Binding Item2}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Column="0"
+                            Click="eAddTag_Click">
+                        <Path 
+      Fill="Black"
+      Stroke="{x:Null}"
+      StrokeThickness=".5"
+      Data="M3.875,0 L5.125,0 5.125,3.875 9,3.875 9,5.125 5.125,5.125 5.125,9 3.875,9 3.875,5.125 0,5.125 0,3.875 3.875,3.875 3.875,0 z" />
+                    </Button>
+                    <Button Grid.Column="1"
+                            Click="eRemoveTag_Click">
+                        <Path 
+                        
+      Fill="Black"
+      Stroke="{x:Null}"
+      StrokeThickness=".5"
+Data="M0,0 L9,0 9,2 0,2 0,0" />
+                    </Button>
+                </Grid>
             </Grid>
-            
+            <Grid Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="9*"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Column="0" Content="OK" Click="eOK_Click"></Button>
+                    <Button Grid.Column="1" Content="Cancel" Click="eCancel_Click"></Button>
+                </Grid>
+            </Grid>
         </Grid>
-        <ItemsControl Grid.Row="1">
-            
-        </ItemsControl>
     </Grid>
 </UserControl>
