--- a/CollectorsFrontEnd/Interfaces/Subs/CompSubAttributeChanger.xaml
+++ b/CollectorsFrontEnd/Interfaces/Subs/CompSubAttributeChanger.xaml
@@ -55,8 +55,8 @@ Data="M0,0 L9,0 9,2 0,2 0,0" />
             </Grid>
             <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="9*"/>
                     <RowDefinition/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <DataGrid x:Name="DGAttrs" CanUserAddRows="false" AutoGenerateColumns="False" ItemsSource="{Binding Path=LstNonUniqueAttrs}">
                     <DataGrid.Columns>
