Image displayed on side collection view. Still need to implement client side attr changing.

--- a/CollectorsFrontEnd/Interfaces/CompCollectionView.xaml
+++ b/CollectorsFrontEnd/Interfaces/CompCollectionView.xaml
@@ -35,7 +35,8 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-
+            <UserControl x:Name="UCImage" Content="{Binding ImageComponent}">
+            </UserControl>
             <Button x:Name="BtnAddItem" Grid.Row="1" HorizontalAlignment="Stretch"
                     Click="eAddItemWindowButton_Click">
                 <TextBlock>Add Item</TextBlock>
