--- a/CollectorsFrontEnd/Interfaces/CompCollectionsOverview.xaml
+++ b/CollectorsFrontEnd/Interfaces/CompCollectionsOverview.xaml
@@ -27,8 +27,7 @@
             <ListBox x:Name="LstBoxLoadedCollections"
                      Grid.Row="1" 
                      ItemsSource="{Binding LstAvailableCollections}"
-                     Height="284" 
-                     VerticalAlignment="Bottom"
+                     VerticalAlignment="Stretch"
                      SelectionChanged="eLstBoxLoadedCollections_SelectionChanged">
 
             </ListBox>
