--- a/CollectorsFrontEnd/Interfaces/Subs/CompSubGeneralization.xaml
+++ b/CollectorsFrontEnd/Interfaces/Subs/CompSubGeneralization.xaml
@@ -7,7 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <ListView x:Name="LVItems" Grid.ZIndex="1" ItemsSource="{Binding LstCardModels}">
+        <ListView x:Name="LVItems" Grid.ZIndex="1" ItemsSource="{Binding LstCardModels}"
+                  SelectionChanged="eSelectionChanged">
             <ListView.View>
                 <GridView x:Name="GVColumns">
                 </GridView>
