--- a/CollectorsFrontEnd/Interfaces/View_Collection.xaml
+++ b/CollectorsFrontEnd/Interfaces/View_Collection.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CollectorsFrontEnd.Interfaces.CompCollectionView"
+﻿<UserControl x:Class="CollectorsFrontEnd.Interfaces.View_Collection"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
