--- a/CollectorsFrontEnd/Interfaces/View_CollectionsOverview.xaml
+++ b/CollectorsFrontEnd/Interfaces/View_CollectionsOverview.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CollectorsFrontEnd.Interfaces.CompCollectionsOverview"
+﻿<UserControl x:Class="CollectorsFrontEnd.Interfaces.View_CollectionsOverview"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
