--- a/CollectorsFrontEnd/Interfaces/View_Cube.xaml
+++ b/CollectorsFrontEnd/Interfaces/View_Cube.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CollectorsFrontEnd.Interfaces.CompCubeView"
+﻿<UserControl x:Class="CollectorsFrontEnd.Interfaces.View_Cube"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,11 +6,14 @@
              xmlns:local="clr-namespace:CollectorsFrontEnd.Interfaces"
              mc:Ignorable="d" 
              d:DesignHeight="380" d:DesignWidth="620">
-    <ItemsControl ItemsSource="{Binding LstGroups}">
-        <ItemsControl.ItemsPanel>
-            <ItemsPanelTemplate>
-                <WrapPanel Orientation="Vertical"/>
-            </ItemsPanelTemplate>
-        </ItemsControl.ItemsPanel>
-    </ItemsControl>
+    <Grid x:Name="CenterPanel">
+        <ItemsControl x:Name="MainDisplay" ItemsSource="{Binding LstGroups}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel Orientation="Vertical"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+        </ItemsControl>
+    </Grid>
+
 </UserControl>
