--- a/CollectorsFrontEnd/Interfaces/Subs/Module_CardDisplayer.xaml
+++ b/CollectorsFrontEnd/Interfaces/Subs/Module_CardDisplayer.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CollectorsFrontEnd.Interfaces.Subs.CompSubCardDisplayer"
+﻿<UserControl x:Class="CollectorsFrontEnd.Interfaces.Subs.Module_CardDisplayer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
