Force Group Into Its own Column Wrap Panel. Important Groups Own Column.

--- a/CollectorsFrontEnd/Interfaces/View_Cube.xaml
+++ b/CollectorsFrontEnd/Interfaces/View_Cube.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="380" d:DesignWidth="620">
     <Grid x:Name="CenterPanel">
-        <ItemsControl x:Name="MainDisplay" ItemsSource="{Binding LstGroups}">
+        <ItemsControl x:Name="MainDisplay" ItemsSource="{Binding LstGroups}" FrameworkElement.SizeChanged="eMainDisplay_Resize">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Vertical"/>
