--- a/CollectorsFrontEnd/Interfaces/Subs/Module_BulkEdits.xaml
+++ b/CollectorsFrontEnd/Interfaces/Subs/Module_BulkEdits.xaml
@@ -62,37 +62,48 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="ComboBox">
                         <Grid>
+
+                            <!--The Toggle button is the visible part. We want to click through this-->
+                            <!--
                             <ToggleButton Name="ToggleButton" Grid.Column="2"
-                                        ClickMode="Press" Focusable="False"
+                                        ClickMode="Press" 
+                                        Focusable="False"
                                         IsChecked="{Binding Path=IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
                                         Template="{StaticResource ComboBoxToggleButtonTemplate}"/>
-                            <ContentPresenter Name="ContentSite" Margin="5, 3, 23, 3" IsHitTestVisible="False"
+                            -->
+                            <ContentPresenter Name="ContentSite" Margin="5, 0, 23, 0" IsHitTestVisible="False"
                                 HorizontalAlignment="Left" VerticalAlignment="Center"                              
                                 Content="{TemplateBinding ComboBox.SelectionBoxItem}" 
                                 ContentTemplate="{TemplateBinding ComboBox.SelectionBoxItemTemplate}"
                                 ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"/>
-                            <TextBox Name="PART_EditableTextBox" Margin="3, 3, 23, 3"                     
+                            <TextBox Name="PART_EditableTextBox" Margin="3, 0, 3, 0"                     
                                 IsReadOnly="{TemplateBinding IsReadOnly}"
-                                Visibility="Hidden" Background="Transparent"
-                                HorizontalAlignment="Left" VerticalAlignment="Center"
-                                Focusable="True" >
+                                HorizontalAlignment="Stretch" 
+                                VerticalContentAlignment="Center"
+                                VerticalAlignment="Stretch"
+                                Focusable="True" 
+                                >
+                                <!--
                                 <TextBox.Template>
                                     <ControlTemplate TargetType="TextBox" >
+                                        
                                         <Border Name="PART_ContentHost" Focusable="False" />
                                     </ControlTemplate>
                                 </TextBox.Template>
+                                  -->
                             </TextBox>
+                              
                             <!-- Popup showing items -->
                             <Popup Name="Popup" Placement="Bottom"
-                   Focusable="False" AllowsTransparency="True"
-                   IsOpen="{TemplateBinding ComboBox.IsDropDownOpen}"
-                   PopupAnimation="Slide">
+                                Focusable="False" AllowsTransparency="True"
+                                IsOpen="{TemplateBinding ComboBox.IsDropDownOpen}"
+                                PopupAnimation="Slide">
                                 <Grid Name="DropDown" SnapsToDevicePixels="True"
-                    MinWidth="{TemplateBinding FrameworkElement.ActualWidth}"
-                    MaxHeight="{TemplateBinding ComboBox.MaxDropDownHeight}">
+                                    MinWidth="{TemplateBinding FrameworkElement.ActualWidth}"
+                                    MaxHeight="{TemplateBinding ComboBox.MaxDropDownHeight}">
                                     <Border Name="DropDownBorder" Background="White" Margin="0, 1, 0, 0"
-                        CornerRadius="0" BorderThickness="1,1,1,1" 
-                        BorderBrush="{StaticResource ComboBoxNormalBorderBrush}"/>
+                                        CornerRadius="0" BorderThickness="1,1,1,1" 
+                                        BorderBrush="{StaticResource ComboBoxNormalBorderBrush}"/>
                                     <ScrollViewer Margin="4" SnapsToDevicePixels="True">
                                         <ItemsPresenter KeyboardNavigation.DirectionalNavigation="Contained" />
                                     </ScrollViewer>
@@ -143,9 +154,11 @@
                    IsReadOnly="False"
                    Style="{StaticResource ComboBoxFlatStyle}"
                    VerticalAlignment="Center" Height="27"
+                       TabIndex="0"
                    ></ComboBox>
             <Button x:Name="BtnAddCard" Grid.Column="0" Grid.Row="1" Margin="10"
-                    Click="eAddItem_Click">
+                    Click="eAddItem_Click"
+                    TabIndex="1">
                 <TextBlock>Add Card</TextBlock>
             </Button>
             <ComboBox  Grid.Column="1"
@@ -155,9 +168,11 @@
                    IsReadOnly="False"
                    Style="{StaticResource ComboBoxFlatStyle}"
                    VerticalAlignment="Center" Height="27"
+                       TabIndex="2"
                    ></ComboBox>
             <Button x:Name="BtnRemoveReplace" Grid.Column="1" Grid.Row="1" Margin="10"
-                    Click="eRemoveReplaceItem_Click">
+                    Click="eRemoveReplaceItem_Click"
+                    TabIndex="3">
                 <TextBlock>Remove/Replace</TextBlock>
             </Button>
         </Grid>
@@ -175,11 +190,13 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Button Grid.Column="0" Margin="15,2"
-                        Click="eAccept_Click">
+                        Click="eAccept_Click" 
+                        TabIndex="4">
                     <TextBlock>Accept</TextBlock>
                 </Button>
                 <Button Grid.Column="1" Margin="15,2"
-                        Click="eCancel_Click">
+                        Click="eCancel_Click"
+                        TabIndex="5">
                     <TextBlock>Cancel</TextBlock>
                 </Button>
             </Grid>
