--- a/CollectorsFrontEnd/Interfaces/Controls/Control_OverlayPanel.xaml
+++ b/CollectorsFrontEnd/Interfaces/Controls/Control_OverlayPanel.xaml
@@ -1,13 +1,12 @@
-﻿<UserControl x:Class="CollectorsFrontEnd.Interfaces.View_Cube"
+﻿<UserControl x:Class="CollectorsFrontEnd.Interfaces.Controls.Control_OverlayPanel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CollectorsFrontEnd.Interfaces"
+             xmlns:local="clr-namespace:CollectorsFrontEnd.Interfaces.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="380" d:DesignWidth="620">
+             >
     <Grid x:Name="CenterPanel">
-
+            
     </Grid>
-
 </UserControl>
