--- a/CollectorsFrontEnd/Interfaces/Components/Component_GroupView.xaml
+++ b/CollectorsFrontEnd/Interfaces/Components/Component_GroupView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CollectorsFrontEnd.Interfaces.Subs.Module_GroupView"
+﻿<UserControl x:Class="CollectorsFrontEnd.Interfaces.Subs.Component_GroupView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
